syntax = "proto3";

package my_service;

service MyServiceController {
  rpc SayHello(Request) returns (Response) {}
  rpc ProcessMessaging(stream Request) returns (stream Response) {}
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse) {}
}

message SendEmailRequest {
    string recipient = 1;
    string subject = 2;
    string body = 3;
}

message SendEmailResponse {
    bool status = 1;
}

message Request {
    string message = 1;
    optional int32 number_of_times = 2;
}

message Response {
    bool status = 1;
}

